--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="./css/main.min.css" />
-		<title>Document</title>
+		<title>WebStudio</title>
 	</head>
 	<body>
 		<header class="header">
@@ -56,7 +56,6 @@
 						<use href="./images/sprite.svg#icon-mobmenu-open"></use>
 					</svg>
 				</button>
-				<!-- <button class="theme-btn">theme</button> -->
 			</div>
 		</header>
 
@@ -261,21 +260,21 @@
 							<p class="team__desc">Product Designer</p>
 							<ul class="social social--team">
 								<li class="social__item">
-									<a class="social__link" href="https://instagram.com">
+									<a class="social__link" target="_blank" href="https://instagram.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social__item">
-									<a class="social__link" href="https://twitter.com">
+									<a class="social__link" target="_blank" href="https://twitter.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social__item">
-									<a class="social__link" href="https://facebook.com">
+									<a class="social__link" target="_blank" href="https://facebook.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
@@ -283,7 +282,7 @@
 								</li>
 
 								<li class="social__item">
-									<a class="social__link" href="https://linkedin.com">
+									<a class="social__link" target="_blank" href="https://linkedin.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
@@ -331,21 +330,21 @@
 							<p class="team__desc">Frontend Developer</p>
 							<ul class="social social--team">
 								<li class="social__item">
-									<a class="social__link" href="https://instagram.com">
+									<a class="social__link" target="_blank" href="https://instagram.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social__item">
-									<a class="social__link" href="https://twitter.com">
+									<a class="social__link" target="_blank" href="https://twitter.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social__item">
-									<a class="social__link" href="https://facebook.com">
+									<a class="social__link" target="_blank" href="https://facebook.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
@@ -353,7 +352,7 @@
 								</li>
 
 								<li class="social__item">
-									<a class="social__link" href="https://linkedin.com">
+									<a class="social__link" target="_blank" href="https://linkedin.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
@@ -401,21 +400,21 @@
 							<p class="team__desc">Marketing</p>
 							<ul class="social social--team">
 								<li class="social__item">
-									<a class="social__link" href="https://instagram.com">
+									<a class="social__link" target="_blank" href="https://instagram.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social__item">
-									<a class="social__link" href="https://twitter.com">
+									<a class="social__link" target="_blank" href="https://twitter.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social__item">
-									<a class="social__link" href="https://facebook.com">
+									<a class="social__link" target="_blank" href="https://facebook.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
@@ -423,7 +422,7 @@
 								</li>
 
 								<li class="social__item">
-									<a class="social__link" href="https://linkedin.com">
+									<a class="social__link" target="_blank" href="https://linkedin.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
@@ -471,21 +470,21 @@
 							<p class="team__desc">UI Designer</p>
 							<ul class="social social--team">
 								<li class="social__item">
-									<a class="social__link" href="https://instagram.com">
+									<a class="social__link" target="_blank" href="https://instagram.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social__item">
-									<a class="social__link" href="https://twitter.com">
+									<a class="social__link" target="_blank" href="https://twitter.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="social__item">
-									<a class="social__link" href="https://facebook.com">
+									<a class="social__link" target="_blank" href="https://facebook.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-facebook"></use>
 										</svg>
@@ -493,7 +492,7 @@
 								</li>
 
 								<li class="social__item">
-									<a class="social__link" href="https://linkedin.com">
+									<a class="social__link" target="_blank" href="https://linkedin.com">
 										<svg class="social__icon">
 											<use href="./images/sprite.svg#icon-linkedin"></use>
 										</svg>
@@ -582,7 +581,11 @@
 					<h3 class="footer-social__title">Find us on</h3>
 					<ul class="social">
 						<li class="social__item">
-							<a class="social__link social__link--footer" href="https://instagram.com">
+							<a
+								class="social__link social__link--footer"
+								target="_blank"
+								href="https://instagram.com"
+							>
 								<svg class="social__icon">
 									<use href="./images/sprite.svg#icon-instagram"></use>
 								</svg>
@@ -590,7 +593,11 @@
 						</li>
 
 						<li class="social__item">
-							<a class="social__link social__link--footer" href="https://twitter.com">
+							<a
+								class="social__link social__link--footer"
+								target="_blank"
+								href="https://twitter.com"
+							>
 								<svg class="social__icon">
 									<use href="./images/sprite.svg#icon-twitter"></use>
 								</svg>
@@ -598,7 +605,11 @@
 						</li>
 
 						<li class="social__item">
-							<a class="social__link social__link--footer" href="https://facebook.com">
+							<a
+								class="social__link social__link--footer"
+								target="_blank"
+								href="https://facebook.com"
+							>
 								<svg class="social__icon">
 									<use href="./images/sprite.svg#icon-facebook"></use>
 								</svg>
@@ -606,7 +617,11 @@
 						</li>
 
 						<li class="social__item">
-							<a class="social__link social__link--footer" href="https://linkedin.com">
+							<a
+								class="social__link social__link--footer"
+								target="_blank"
+								href="https://linkedin.com"
+							>
 								<svg class="social__icon">
 									<use href="./images/sprite.svg#icon-linkedin"></use>
 								</svg>
@@ -756,28 +771,23 @@
 			</div>
 			<ul class="mob-social">
 				<li class="mob-social__item">
-					<a class="mob-social__link" href="https://instagram.com">Instagram</a>
+					<a class="mob-social__link" target="_blank" href="https://instagram.com">Instagram</a>
 				</li>
 
 				<li class="mob-social__item">
-					<a class="mob-social__link" href="https://twitter.com">Twitter</a>
+					<a class="mob-social__link" target="_blank" href="https://twitter.com">Twitter</a>
 				</li>
 
 				<li class="mob-social__item">
-					<a class="mob-social__link" href="https://facebook.com">Facebook</a>
+					<a class="mob-social__link" target="_blank" href="https://facebook.com">Facebook</a>
 				</li>
 
 				<li class="mob-social__item">
-					<a class="mob-social__link" href="https://linkedin.com">LinkedIn</a>
+					<a class="mob-social__link" target="_blank" href="https://linkedin.com">LinkedIn</a>
 				</li>
 			</ul>
 		</div>
 
-		<!-- <script src="./js/index.js"></script> -->
-		<script src="./js/modal.js"></script>
-		<script src="./js/info-form.js"></script>
-		<script src="./js/footer-form.js"></script>
-		<!-- <script src="./js/theme.js"></script> -->
-		<script src="./js/mob-menu.js"></script>
+		<script src="./index.js" type="module"></script>
 	</body>
 </html>
