--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 				<a class="logo logo--top" href="./index.html">
 					<span class="logo--accent">Web</span>Studio</a
 				>
-				<nav class="nav mobmenu-hidden">
+				<nav class="nav">
 					<ul class="nav__list">
 						<li class="nav__item">
 							<a class="nav__link" href="./index.html">Studio</a>
@@ -33,7 +33,7 @@
 					</ul>
 				</nav>
 
-				<div class="header-address mobmenu-hidden">
+				<div class="header-address">
 					<a class="header-address__link" href="mailto:info@devstudio.com">
 						<svg class="header-address__icon" width="16" height="12">
 							<use href="./images/sprite.svg#icon-envelope"></use>
@@ -561,7 +561,11 @@
 					<h3 class="footer-social__title">Find us on</h3>
 					<ul class="social">
 						<li class="social__item">
-							<a class="social__link social__link--footer" href="https://instagram.com">
+							<a
+								class="social__link social__link--footer"
+								target="_blank"
+								href="https://instagram.com"
+							>
 								<svg class="social__icon">
 									<use href="./images/sprite.svg#icon-instagram"></use>
 								</svg>
@@ -569,7 +573,11 @@
 						</li>
 
 						<li class="social__item">
-							<a class="social__link social__link--footer" href="https://twitter.com">
+							<a
+								class="social__link social__link--footer"
+								target="_blank"
+								href="https://twitter.com"
+							>
 								<svg class="social__icon">
 									<use href="./images/sprite.svg#icon-twitter"></use>
 								</svg>
@@ -577,7 +585,11 @@
 						</li>
 
 						<li class="social__item">
-							<a class="social__link social__link--footer" href="https://facebook.com">
+							<a
+								class="social__link social__link--footer"
+								target="_blank"
+								href="https://facebook.com"
+							>
 								<svg class="social__icon">
 									<use href="./images/sprite.svg#icon-facebook"></use>
 								</svg>
@@ -585,7 +597,11 @@
 						</li>
 
 						<li class="social__item">
-							<a class="social__link social__link--footer" href="https://linkedin.com">
+							<a
+								class="social__link social__link--footer"
+								target="_blank"
+								href="https://linkedin.com"
+							>
 								<svg class="social__icon">
 									<use href="./images/sprite.svg#icon-linkedin"></use>
 								</svg>
@@ -660,7 +676,6 @@
 			</ul>
 		</div>
 
-		<script src="./js/footer-form.js"></script>
-		<script src="./js/mob-menu.js"></script>
+		<script src="./portfolio.js" type="module"></script>
 	</body>
 </html>
