fixing mob menu

--- a/index.html
+++ b/index.html
@@ -765,27 +765,29 @@
 				</ul>
 			</nav>
 
-			<div class="mob-address">
-				<a class="mob-address__link" href="tel:+12127724150"> +1 212-772-4150</a>
-				<a class="mob-address__link" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+			<div>
+				<div class="mob-address">
+					<a class="mob-address__link" href="tel:+12127724150"> +1 212-772-4150</a>
+					<a class="mob-address__link" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+				</div>
+				<ul class="mob-social">
+					<li class="mob-social__item">
+						<a class="mob-social__link" target="_blank" href="https://instagram.com">Instagram</a>
+					</li>
+
+					<li class="mob-social__item">
+						<a class="mob-social__link" target="_blank" href="https://twitter.com">Twitter</a>
+					</li>
+
+					<li class="mob-social__item">
+						<a class="mob-social__link" target="_blank" href="https://facebook.com">Facebook</a>
+					</li>
+
+					<li class="mob-social__item">
+						<a class="mob-social__link" target="_blank" href="https://linkedin.com">LinkedIn</a>
+					</li>
+				</ul>
 			</div>
-			<ul class="mob-social">
-				<li class="mob-social__item">
-					<a class="mob-social__link" target="_blank" href="https://instagram.com">Instagram</a>
-				</li>
-
-				<li class="mob-social__item">
-					<a class="mob-social__link" target="_blank" href="https://twitter.com">Twitter</a>
-				</li>
-
-				<li class="mob-social__item">
-					<a class="mob-social__link" target="_blank" href="https://facebook.com">Facebook</a>
-				</li>
-
-				<li class="mob-social__item">
-					<a class="mob-social__link" target="_blank" href="https://linkedin.com">LinkedIn</a>
-				</li>
-			</ul>
 		</div>
 
 		<script src="./index.js" type="module"></script>
