portfolio buttons functionality

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,24 +61,24 @@
 					<h1 class="visually-hidden">Portfolio</h1>
 					<ul class="buttons">
 						<li class="buttons__item">
-							<button class="buttons__snap" type="button">All</button>
+							<button class="buttons__snap" type="button" data-filter="all">All</button>
 						</li>
 						<li class="buttons__item">
-							<button class="buttons__snap" type="button">Web-sites</button>
+							<button class="buttons__snap" type="button" data-filter="web">Web-sites</button>
 						</li>
 						<li class="buttons__item">
-							<button class="buttons__snap" type="button">Apps</button>
+							<button class="buttons__snap" type="button" data-filter="apps">Apps</button>
 						</li>
 						<li class="buttons__item">
-							<button class="buttons__snap" type="button">Design</button>
+							<button class="buttons__snap" type="button" data-filter="design">Design</button>
 						</li>
 						<li class="buttons__item">
-							<button class="buttons__snap" type="button">Marketing</button>
+							<button class="buttons__snap" type="button" data-filter="marketing">Marketing</button>
 						</li>
 					</ul>
 
 					<ul class="projects">
-						<li class="projects__item">
+						<li class="projects__item" data-item="web">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper overflow-hidden">
 									<picture>
@@ -129,7 +129,7 @@
 							</a>
 						</li>
 
-						<li class="projects__item">
+						<li class="projects__item" data-item="design">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
 									<picture>
@@ -180,7 +180,7 @@
 							</a>
 						</li>
 
-						<li class="projects__item">
+						<li class="projects__item" data-item="apps">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
 									<picture>
@@ -231,7 +231,7 @@
 							</a>
 						</li>
 
-						<li class="projects__item">
+						<li class="projects__item" data-item="marketing">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
 									<picture>
@@ -282,7 +282,7 @@
 							</a>
 						</li>
 
-						<li class="projects__item">
+						<li class="projects__item" data-item="apps">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
 									<picture>
@@ -333,7 +333,7 @@
 							</a>
 						</li>
 
-						<li class="projects__item">
+						<li class="projects__item" data-item="web">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper overflow-hidden">
 									<picture>
@@ -384,7 +384,7 @@
 							</a>
 						</li>
 
-						<li class="projects__item">
+						<li class="projects__item" data-item="design">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
 									<picture>
@@ -435,7 +435,7 @@
 							</a>
 						</li>
 
-						<li class="projects__item">
+						<li class="projects__item" data-item="marketing">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
 									<picture>
@@ -486,7 +486,7 @@
 							</a>
 						</li>
 
-						<li class="projects__item">
+						<li class="projects__item" data-item="apps">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper">
 									<picture>
