fix projects links

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
 
 						<ul class="projects">
 							<li class="projects__item" data-item="web">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper overflow-hidden">
 										<picture>
 											<source
@@ -138,7 +138,7 @@
 							</li>
 
 							<li class="projects__item" data-item="design">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper">
 										<picture>
 											<source
@@ -190,7 +190,7 @@
 							</li>
 
 							<li class="projects__item" data-item="apps">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper">
 										<picture>
 											<source
@@ -242,7 +242,7 @@
 							</li>
 
 							<li class="projects__item" data-item="marketing">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper">
 										<picture>
 											<source
@@ -294,7 +294,7 @@
 							</li>
 
 							<li class="projects__item" data-item="apps">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper">
 										<picture>
 											<source
@@ -346,7 +346,7 @@
 							</li>
 
 							<li class="projects__item" data-item="web">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper overflow-hidden">
 										<picture>
 											<source
@@ -398,7 +398,7 @@
 							</li>
 
 							<li class="projects__item" data-item="design">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper">
 										<picture>
 											<source
@@ -450,7 +450,7 @@
 							</li>
 
 							<li class="projects__item" data-item="marketing">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper">
 										<picture>
 											<source
@@ -502,7 +502,7 @@
 							</li>
 
 							<li class="projects__item" data-item="apps">
-								<a class="projects__link" href="/">
+								<a class="projects__link" href="./portfolio.html">
 									<div class="projects__wrapper">
 										<picture>
 											<source
